--- a/app/views/download/package.erb
+++ b/app/views/download/package.erb
@@ -69,10 +69,13 @@ pacman -Sy <%= repo_name %>/<%= @package %></pre>
                   <pre><%=
                      case v[:flavor]
                      when 'openSUSE', 'SLE'
+                       if @project != "openSUSE:Factory" and @project != "openSUSE:Tumbleweed" and not @project .start_with? "openSUSE:Leap:"
+                         "zypper addrepo #{v[:repo]}#{@project}.repo &&\nzypper refresh &&\n"
+                       end
                        if @package.nil?
-                         "zypper addrepo #{v[:repo]}#{@project}.repo\nzypper refresh\nzypper install -t pattern #{@pattern}"
+                         "zypper install -t pattern #{@pattern}\n"
                        else
-                         "zypper addrepo #{v[:repo]}#{@project}.repo\nzypper refresh\nzypper install #{@package}"
+                         "zypper install #{@package}\n"
                        end
                      when 'Fedora'
                        version = k.split("_").last
